# PROVES_LIBRARY

./: .env.example  .gitignore  .hintrc  .markdownlint.json  .netlifyignore  =4.12.0  ARCHIVE_MANIFEST.md  CANON.md  CLAUDE_CODE_STARTUP_CHECKLIST.md  FOLDER_STRUCTURE.md  GETTING_STARTED.md  LICENSE  ONTOLOGY.md  README.md  ROADMAP.md  TOOLS_AUDIT.md  check_db_enums.py  check_pending_extractions.py  docker-compose.yml  fix_liquid.py  instructions_I_must_always_follow.md  netlify.toml  requirements.txt  setup.bat  setup.py  setup.sh  start_webhook.bat
.archive/: README.md
Audits/: 2026-01-03_code_review_version_3.md  2026-01-03_codebase_fixes.md  2026-01-03_db_optimization.md  2026-01-03_gitalk_fix.md  (+16 more)
production/: README.md  pyproject.toml  test_agent.py
production/Version 2/: extractor.py  process_extractions_v2.py  storage.py  subagent_specs.py  validator.py
production/Version 3/: AUDIT_V3_REFACTOR.md  README_V3_DEEP.md  __init__.py  agent_deep_v3.py  agent_v3.py  extractor_v3.py  process_extractions_deep_v3.py  process_extractions_v3.py  storage_v3.py  subagent_specs_v3.py  validator_v3.py
production/core/: db_connector.py  graph_manager.py
production/curator/: __init__.py  agent_v2.py  config.py  error_logger.py  notion_sync.py  subagent_specs.py  subagent_specs_v3.py  suggestion_sync.py
production/curator/subagents/: __init__.py  extractor.py  storage.py  url_fetcher.py  validator.py
production/docs/: CHANGELOG.md  DEPLOYMENT_NOTES.md  NOTION_INTEGRATION_GUIDE.md
production/scripts/: find_good_urls.py  improvement_analyzer.py  process_extractions.py
(+262 files in other folders)
